fixed links to projects and added spacing to buttons

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2582,6 +2582,7 @@ input, select, textarea {
 		border-radius: 5px;
 		border: 2px solid #9ea1a3;
 		font-size: 18px;
+		margin-bottom: 5px;
 		/*display: block;*/
 	}
 
